Add DepartmentCourse join.

--- a/UniReg/Views/Departments/Details.cshtml
+++ b/UniReg/Views/Departments/Details.cshtml
@@ -24,5 +24,9 @@ else
 }
 
 <p>@Html.ActionLink("Back to courses", "Index")</p>
+
+<p>@Html.ActionLink("Add a course to this department.", "AddCourse")</p>
+
 <p>@Html.ActionLink("Edit Course", "Edit", new { id = Model.DepartmentId })</p>
+
 <p>@Html.ActionLink("Delete Course", "Delete", new { id = Model.DepartmentId })</p>
