--- a/UniReg/Views/Home/Index.cshtml
+++ b/UniReg/Views/Home/Index.cshtml
@@ -5,4 +5,5 @@
 <h1>Welcome to the school registrar</h1>
 <p>@Html.ActionLink("See all students", "Index", "Students")</p>
 <p>@Html.ActionLink("See all courses", "Index", "Courses")</p>
+<p>@Html.ActionLink("See all departments", "Index", "Departments")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
