--- a/UniReg/Views/Students/AddCourse.cshtml
+++ b/UniReg/Views/Students/AddCourse.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Add a course</h2>
 
-<h4>Add a course for this student: @Html.DisplayFor(model => model.Name)</h4>
+<h4>Add a course for this student: @Html.DisplayFor(model => model.StudentName)</h4>
 
 @using (Html.BeginForm())
 {
