--- a/UniReg/Views/Students/Create.cshtml
+++ b/UniReg/Views/Students/Create.cshtml
@@ -8,8 +8,8 @@
 
 @using (Html.BeginForm())
 {
-    @Html.LabelFor(model => model.Name)
-    @Html.TextBoxFor(model => model.Name)
+    @Html.LabelFor(model => model.StudentName)
+    @Html.TextBoxFor(model => model.StudentName)
 
     @Html.Label("Select course")
     @Html.DropDownList("CourseId")
