--- a/UniReg/Views/Courses/Details.cshtml
+++ b/UniReg/Views/Courses/Details.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Course Details</h2>
 <hr />
-<h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h3>
+<h3>@Html.DisplayNameFor(model => model.CourseName): @Html.DisplayFor(model => model.CourseName)</h3>
 
 @if (@Model.Students.Count == 0)
 {
@@ -18,7 +18,7 @@ else
     <ul>
         @foreach (var join in Model.Students)
         {
-            <li>@join.Student.Name</li>
+            <li>@join.Student.StudentName</li>
         }
     </ul>
 }
