--- a/UniReg/Views/Courses/Edit.cshtml
+++ b/UniReg/Views/Courses/Edit.cshtml
@@ -6,14 +6,14 @@
 
 <h2>Edit</h2>
 
-<h4>Edit this category: @Html.DisplayFor(model => model.Name)</h4>
+<h4>Edit this course: @Html.DisplayFor(model => model.CourseName)</h4>
 
 @using (Html.BeginForm())
 {
     @Html.HiddenFor(model => model.CourseId)
 
-    @Html.LabelFor(model => model.Name)
-    @Html.EditorFor(model => model.Name)
+    @Html.LabelFor(model => model.CourseName)
+    @Html.EditorFor(model => model.CourseName)
 
     <input type="submit" value="Save" />
 }
