--- a/UniReg/Views/Departments/Create.cshtml
+++ b/UniReg/Views/Departments/Create.cshtml
@@ -7,8 +7,8 @@
 <h4>Add a new department:</h4>
 @using (Html.BeginForm())
 {
-    @Html.LabelFor(model => model.Name)
-    @Html.TextBoxFor(model => model.Name)
+    @Html.LabelFor(model => model.DepartmentName)
+    @Html.TextBoxFor(model => model.DepartmentName)
     <input type="submit" value="Add new department" />
 }
 <p>@Html.ActionLink("Show all courses", "Index")</p>
