--- a/UniReg/Views/Departments/Delete.cshtml
+++ b/UniReg/Views/Departments/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Are you sure you want to delete this department?</h2>
 
-@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)
+@Html.DisplayNameFor(model => model.DepartmentName): @Html.DisplayFor(model => model.DepartmentName)
 @using (Html.BeginForm())
 {
     <input type="submit" value="Delete" />
