--- a/UniReg/Views/Departments/Edit.cshtml
+++ b/UniReg/Views/Departments/Edit.cshtml
@@ -6,14 +6,14 @@
 
 <h2>Edit</h2>
 
-<h4>Edit this department: @Html.DisplayFor(model => model.Name)</h4>
+<h4>Edit this department: @Html.DisplayFor(model => model.DepartmentName)</h4>
 
 @using (Html.BeginForm())
 {
     @Html.HiddenFor(model => model.DepartmentId)
 
-    @Html.LabelFor(model => model.Name)
-    @Html.EditorFor(model => model.Name)
+    @Html.LabelFor(model => model.DepartmentName)
+    @Html.EditorFor(model => model.DepartmentName)
 
     <input type="submit" value="Save" />
 }
