--- a/UniReg/Views/Students/Delete.cshtml
+++ b/UniReg/Views/Students/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Are you sure you want to delete this Student from the registrar?</h2>
 
-@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)
+@Html.DisplayNameFor(model => model.StudentName): @Html.DisplayFor(model => model.StudentName)
 @using (Html.BeginForm())
 {
     <input type="submit" value="Delete" />
