--- a/UniReg/Views/Students/Edit.cshtml
+++ b/UniReg/Views/Students/Edit.cshtml
@@ -6,14 +6,14 @@
 
 <h2>Edit</h2>
 
-<h4>Edit this student's info: @Html.DisplayFor(model => model.Name)</h4>
+<h4>Edit this student's info: @Html.DisplayFor(model => model.StudentName)</h4>
 
 @using (Html.BeginForm())
 {
     @Html.HiddenFor(model => model.StudentId)
 
-    @Html.LabelFor(model => model.Name)
-    @Html.EditorFor(model => model.Name)
+    @Html.LabelFor(model => model.StudentName)
+    @Html.EditorFor(model => model.StudentName)
 
     @Html.Label("Select course")
     @Html.DropDownList("CourseId")
