--- a/UniReg/Views/Students/Index.cshtml
+++ b/UniReg/Views/Students/Index.cshtml
@@ -10,7 +10,7 @@
   <ul>
     @foreach (Student student in Model)
     {
-      <li>@Html.ActionLink($"{student.Name}", "Details", new { id = student.StudentId })</li>
+      <li>@Html.ActionLink($"{student.StudentName}", "Details", new { id = student.StudentId })</li>
     }
   </ul>
 }
