--- a/UniReg/Views/Departments/Details.cshtml
+++ b/UniReg/Views/Departments/Details.cshtml
@@ -25,7 +25,7 @@ else
 
 <p>@Html.ActionLink("Back to departments", "Index")</p>
 
-<p>@Html.ActionLink("Add a course to this department.", "AddCourse")</p>
+<p>@Html.ActionLink("Add a course to this department.", "AddCourse", new { id = Model.DepartmentId })</p>
 
 <p>@Html.ActionLink("Edit Department", "Edit", new { id = Model.DepartmentId })</p>
 
